changed name of with-ahnds folder

--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -131,11 +131,11 @@
 
             <div class="smallmore">
                 <img class="more"
-                src="../../images/stone/photography/with hands/E_IMG_3095-min.jpg"
+                src="../../images/stone/photography/with-hands/E_IMG_3095-min.jpg"
                 alt=""
                 >
                 <img class="more"
-                src="../../images/stone/photography/with hands/E_E_IMG_3158-min.png"
+                src="../../images/stone/photography/with-hands/E_E_IMG_3158-min.png"
                 alt=""
                 >
             </div>
@@ -164,7 +164,7 @@
             <div class="bigbr"></div>
 
             <div class="welcome-container">
-                <img class="full-content" src="../../images/stone/photography/with hands/E_E_IMG_3127-min.png">
+                <img class="full-content" src="../../images/stone/photography/with-hands/E_E_IMG_3127-min.png">
             </div>
        
             <div class="hugebr"></div>
@@ -241,11 +241,11 @@
 
             <div class="smallmore">
                 <img class="more"
-                src="../../images/stone/photography/with hands/E_IMG_3179-min.jpg"
+                src="../../images/stone/photography/with-hands/E_IMG_3179-min.jpg"
                 alt=""
                 >
                 <img class="more"
-                src="../../images/stone/photography/with hands/E_IMG_3170-min.jpg"
+                src="../../images/stone/photography/with-hands/E_IMG_3170-min.jpg"
                 alt=""
                 >
             </div>
