add l to vellum

--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -203,7 +203,7 @@
                 
                     <h8>
 
-                        Velum is utlized on the outer cover to highlight the drastic deplastering of the church and its structural changes over time.
+                        Vellum is utlized on the outer cover to highlight the drastic deplastering of the church and its structural changes over time.
 
                         <br>
                         <br>
