fizing .jpg ending on stone images

--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -115,7 +115,7 @@
            <div class="bigbr"></div>
 
            <div class="welcome-container">
-            <img class="full-content" src="../../images/stone/photography/IMG_2873.jpg">
+            <img class="full-content" src="../../images/stone/photography/IMG_2873.JPG">
            </div>
 
            <div class="hugebr"></div>
@@ -131,8 +131,8 @@
 
             <div class="smallmore">
                 <img class="more"
-                src="../../images/stone/photography/with-hands/E_IMG_3095-min.jpg"
-                alt=""
+                src="../../images/stone/photography/with-hands/E_IMG_3095-min.JPG"
+          
                 >
                 <img class="more"
                 src="../../images/stone/photography/with-hands/E_E_IMG_3158-min.png"
@@ -219,7 +219,7 @@
 
         
             <div class="welcome-container">
-                <img class="full-content" src="../../images/stone/photography/IMG_2882.jpg">
+                <img class="full-content" src="../../images/stone/photography/IMG_2882.JPG">
             </div>
 
             <div class="hugebr"></div>
@@ -233,7 +233,7 @@
             <div class="bigbr"></div>
 
             <div class="welcome-container">
-                <img class="full-content" src="../../images/stone/photography/IMG_2913.jpg">
+                <img class="full-content" src="../../images/stone/photography/IMG_2913.JPG">
             </div>
 
             <div class="smallbr"></div>
@@ -241,11 +241,11 @@
 
             <div class="smallmore">
                 <img class="more"
-                src="../../images/stone/photography/with-hands/E_IMG_3179-min.jpg"
+                src="../../images/stone/photography/with-hands/E_IMG_3179-min.JPG"
                 alt=""
                 >
                 <img class="more"
-                src="../../images/stone/photography/with-hands/E_IMG_3170-min.jpg"
+                src="../../images/stone/photography/with-hands/E_IMG_3170-min.JPG"
                 alt=""
                 >
             </div>
