editing spoken page intro

--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -61,7 +61,7 @@
                     
                     <h8>
 
-                       <h8 style="font-style: italic;"> "Шыяан ам" </h8>  translates to <h8 style="font-style: italic;">"Once upon a time"</h8>. It's a phrase from the indigenous to the southern Siberian steppe, the Tuvan language is currently endangered due to the encroachment of the dominant culture and language of Russia. 
+                        In the past, the traditionally nomadic peoples of Tuva would gather around their campfires at night and listen to storytellers regale them. Today however, both this ancient pastime and the Tuvan language itself are endangered due to Russia's encroachment upon Central Asia.
                         <div class="smallbr"></div>
                         Inspired by Dr. Rossina Soyan, a native Tuvan speaker and educator, I am working to design a language resource that sparks curiosity by binding together audio of a traditional Tuvan storyteller with explanatory visual materials.
                     </h8>
