fixed gallery page web formatting -stone test

--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -43,7 +43,7 @@
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h2>
-                    Шыяан ам
+                    Once Upon <br> a Time
                     </h2>
                     
                     <br>
