sprouting inuit page, rough rough draft

--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -153,7 +153,7 @@
                     <div class="smallbr"></div>
                 <h8>
 
-                    Looped animation builds on the underlying scene and highlights easily communicable words like "elk" and "forest" - calling to mind the living, breathing concepts which they vocally represent.
+                    Looped animations build on the underlying scene and highlight easily communicable words like "elk" and "forest" - calling to mind the living, breathing concepts which they vocally represent.
                 </h8>
             </div>
         </div>
