shortened slice name

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                                                 <h1>Currently i'm a...</h1> 
                                                 <div class="smallbr"></div>
                                                
-                                                → Graphic Design Intern at <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU's Office of SLICE↗</a>. <br>
+                                                → Graphic Design Intern at <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU SLICE↗</a>. <br>
                                                 → Design Chair at <a href="https://www.cmu.edu/stuco/" target="_blank">CMU Student College↗</a>.  <br>
                                                 → Teaching Assistant at <a href="https://www.design.cmu.edu/" target="_blank">CMU School of Design↗</a>. <br>
                                                 → Senior at Carnegie Mellon  majoring in <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Design↗</a> <br>&nbsp;&nbsp;&nbsp;&nbsp; &  minoring in <a href="https://www.cmu.edu/dietrich/history/undergraduate/minors/sph.html" target="_blank">Social and Political History↗</a>.
