--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
 
         <main>
-            <div class="bigbr"></div>
+            <!-- <div class="bigbr"></div> -->
             <div class="image-gallery">
                 <img class="project" src="images/lewis-dion_profile-pic.JPG">
                 <div class="bigbr"></div>
