more blue on about and footer

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="bigbr"></div>
 
             <footer>
-                <h8>
+                <h8 style="color: #5CBBFF">
                     <div class="project-descriptions"> 
 
                         Custom Coded.
