about gap fixing

--- a/about.html
+++ b/about.html
@@ -96,7 +96,9 @@
                                                     → Senior at Carnegie Mellon  majoring <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;in <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Design↗</a>  &  minoring in <a href="https://www.cmu.edu/dietrich/history/undergraduate/minors/sph.html" target="_blank">History↗</a>.
                                                 </h8>
 
-                                                <div class="bigbr"></div>
+                                                <div class="smallbr"></div>
+                                                <div class="smallbr"></div>
+
 
 
                                                 <h1 style="color: #5CBBFF">Previously I was a ...</h1> 
@@ -110,7 +112,10 @@
 
                                                 <h8 style="color: #5CBBFF">
 
-                                                    <div class="bigbr"></div>
+                                                    <div class="smallbr"></div>
+                                                    <div class="smallbr"></div>
+
+
 
                                                     <h1 style="color: #5CBBFF">Personally I'm a ...</h1> 
                                                    
@@ -120,7 +125,7 @@
                                                     <a href="https://www.youtube.com/watch?v=1rWfyj4caRg" target="_blank">"lore"</a> guy, a lover 
                                                     of 
                                                     <a href="https://www.youtube.com/watch?v=SE7kje3z9c8" target="_blank">Metroidvanias</a>, <br>
-                                                    a shameless consumer of <a href="https://www.youtube.com/watch?v=Cx8TJ-qM1BU" target="_blank">youtube reactions</a>, 
+                                                    a shameless consumer of all <a href="https://www.youtube.com/watch?v=Cx8TJ-qM1BU" target="_blank">react content</a>, <br>
                                                     a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>,  a stan of 
                                                     <a href="https://www.carnegielibrary.org/" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character :^D
                                                 </h8>
