margins on content-laptop

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                                                 <h8 style="color: #5CBBFF">
                                                     Tech Design Intern - <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a> <br>
                                                     Graphic Design Intern - <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU SLICE↗</a> <br>
-                                                    Graphic Designer - <a href="https://www.cmu.edu/stugov/senate/" target="_blank">CMU Student Senate↗</a><br>
+                                                    Graphic Designer - <a href="https://www.cmu.edu/stugov/senate/" target="_blank">CMU Senate↗</a><br>
                                                     Teaching Assistant - <a href="https://www.design.cmu.edu/" target="_blank">CMU  Design↗</a> <br>
                                                     Design Chair - <a href="https://www.cmu.edu/stuco/" target="_blank">CMU Student College↗</a>  <br>
                                                     Print Designer - <a href="https://www.lunargala.org/" target="_blank">Lunar Gala↗</a> <br>
@@ -136,7 +136,7 @@
             <iframe class="youtube-video"  src="https://www.youtube.com/embed/arzgxNmWJiI?si=PH3EzOgf3SbKD1o8&loop=1&playlist=arzgxNmWJiI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allow="autoplay" allowfullscreen></iframe> -->
 
   <div class="bigbr"></div>
-  
+
             <iframe class="youtube-video"  src="https://www.youtube.com/embed/CC-CffIolk0?si=79YNfsw4OzlrwhJW&loop=1&playlist=CC-CffIolk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allow="autoplay" allowfullscreen></iframe>
 
             <div class="bigbr"></div>
