abvout fix on laptop content

--- a/about.html
+++ b/about.html
@@ -70,14 +70,14 @@
 
                                     <h8>
                                         <div class="welcome-container">
-                                            <div class="welcome-box1">
+                                            <div class="welcome-boxa1">
                                                 <div class="image-gallery">
                                                     <img class="project" src="images/lewis-dion_profile-pic.JPG">
                                                     <div class="bigbr"></div>
                                                 </div>  
                                                
                                             </div>
-                                            <div class="welcome-box2">
+                                            <div class="welcome-boxa2">
                                                 <h3 style="color: #5CBBFF">Work</h3> 
                                                <br>
                                                 <h8 style="color: #5CBBFF">
