--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                                                     <h3 style="color: #5CBBFF">Education</h3> <br>
 
 
-                                                    Carnegie Mellon University <br> Bachelor of  <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Design↗</a> <br>  Minor in <a href="https://www.cmu.edu/dietrich/history/undergraduate/minors/sph.html" target="_blank">Social and Political History↗</a>.
+                                                    Carnegie Mellon University <br> Bachelor of  <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Design↗</a> <br>  Minor in <a href="https://www.cmu.edu/dietrich/history/undergraduate/minors/sph.html" target="_blank">Social and Political History↗</a>
                                                 </h8>
 
                                                 
