--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                                                     Graphic Design Intern - <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU SLICE↗</a> <br>
                                                     Graphic Designer - <a href="https://www.cmu.edu/stugov/senate/" target="_blank">CMU Senate↗</a><br>
                                                     Teaching Assistant - <a href="https://www.design.cmu.edu/" target="_blank">CMU  Design↗</a> <br>
-                                                    Design Chair - <a href="https://www.cmu.edu/stuco/" target="_blank">CMU Student College↗</a>  <br>
+                                                    Design Chair - <a href="https://www.cmu.edu/stuco/" target="_blank">CMU StuCo↗</a>  <br>
                                                     Print Designer - <a href="https://www.lunargala.org/" target="_blank">Lunar Gala↗</a> <br>
 
                                                     <div class="smallbr"></div>
