making stone page easier to read, side by side image and copy

--- a/gallery/inuit.html
+++ b/gallery/inuit.html
@@ -60,7 +60,7 @@
 
                         Highlighting Inuit Canadians' ongoing battle with tuberculosis through the stories of two children who tragically died due to the disease, 50 years apart.
                         <div class="smallbr"></div>
-                        This project is very much a work in progress*
+                        Ongoing*
                     </h8>
             
                 </div>
