--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -72,7 +72,7 @@
                     <h8>
 
                        
-                        Mapping the essential stories & people behind a centuries-old Goan church.
+                        Mapping the essential stories & people behind the centuries-old, Basilica of Bom Jesus.
             
                 </div>
 
