typo stone correction

--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -112,7 +112,7 @@
 
                         <div class="smallbr"></div>
 
-                        To tell it's story I wrote and designed a 55 page, saddle-stitch booklet that documents the basilica’s history, and developed a web component that answers it's “FAQ” for the heritage site in the form of a timeline.
+                        To tell it's story I wrote and designed a 55 page, saddle-stitch booklet that documents the basilica’s history, and developed a web component that answers it's “FAQ” in the form of a timeline.
                     </h8>
                 </div>
             </div>
