--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -122,10 +122,15 @@
            
 <!-- EEND OF INTRO STUFF -->
 
+            <div class="welcome-container">
+                <video width="100%" loop autoplay muted>
+                    <source src="../../images/stone/motion/min_stone_page-loop-2.mp4" type="video/mp4">
+                </video>            
+            </div>
+
 <!-- START OF LANGUAGE FOCUS -->
           
-
-
+            <div class="smallbr"></div>
 
             <div class="smallmore">
                 <img class="more"
