made about video autoplay

--- a/about.html
+++ b/about.html
@@ -48,8 +48,12 @@
             <div class="smallbr"></div>
 
 
-            <iframe class="youtube-video"  src="https://www.youtube.com/embed/arzgxNmWJiI?si=PH3EzOgf3SbKD1o8&loop=1&playlist=arzgxNmWJiI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allow="autoplay" allowfullscreen></iframe>
+            <!-- <iframe class="youtube-video"  src="https://www.youtube.com/embed/arzgxNmWJiI?si=PH3EzOgf3SbKD1o8&loop=1&playlist=arzgxNmWJiI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allow="autoplay" allowfullscreen></iframe> -->
+            <video width="100%" loop autoplay controls>
+                <source src="../../images/about/open-world.mp4" type="video/mp4">
+            </video>
 
+            
                         <div class="bigbr"></div>
 
 
