--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -42,7 +42,7 @@
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h1>
-                    Once Upon  a Time
+                    Tuvan Hero Tale
                     </h1>
 
                     <div class="smallbr"></div>
