tweaks to stone name and copy, as well as about page

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
 
                                     <h1>
-                                        Hi again! My name is Dion Lewis. I'm a Canadian designer <br> currently studing Communications Design & Social and Political History at Carnegie Mellon University. Huge fan of stories <br>and their tellers (very cool & human). <br> 
+                                        Hi again! My name is Dion Lewis. I'm a Canadian designer <br> currently studing Communications Design & Social and Political History at Carnegie Mellon University. <br><br>Huge fan of stories and their tellers :^) <br> 
                                         <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
                                         <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
                                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
@@ -130,7 +130,7 @@
                                                     of 
                                                     <a href="https://www.youtube.com/watch?v=SE7kje3z9c8" target="_blank">Metroidvanias</a>, 
                                                     a shameless consumer of <a href="https://www.youtube.com/watch?v=Cx8TJ-qM1BU" target="_blank">youtube reactions</a>, 
-                                                    a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>,  a big fan of 
+                                                    a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>,  a stan of 
                                                     <a href="https://www.carnegielibrary.org/" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character.
                                                 </h1>
 <!-- 
@@ -139,7 +139,7 @@
 
             <iframe class="youtube-video"  src="https://www.youtube.com/embed/arzgxNmWJiI?si=PH3EzOgf3SbKD1o8&loop=1&playlist=arzgxNmWJiI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allow="autoplay" allowfullscreen></iframe> -->
 
-  <div class="bigbr"></div>
+            <div class="hugebr"></div>
 
             <iframe class="youtube-video"  src="https://www.youtube.com/embed/CC-CffIolk0?si=79YNfsw4OzlrwhJW&loop=1&playlist=CC-CffIolk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allow="autoplay" allowfullscreen></iframe>
 
