--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="gallery/stone.html"><img class="project" src="images/stone/photography/IMG_2934.JPG">
 
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h3> Stone Does Not Speak</h3> <br> <h4>Publication Design</h4><br> </div> 
+                    <div class="project-descriptions"> <h3> Basilica of Bom Jesus </h3> <br> <h4>Publication Design</h4><br> </div> 
                 </a>
             </div> 
 
@@ -107,7 +107,7 @@
                 <a href="gallery/spoken.html"><img class="project" src="images/spoken/spoken_thumbnail.png">
             
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h3>Tuvan Hero Tale</h3> <br> <h4>Visual System</h4><br> </div> 
+                    <div class="project-descriptions"> <h3>A Tuvan Hero Tale</h3> <br> <h4>Visual System</h4><br> </div> 
                 </a>
             </div> 
 
