--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                         <div class="hugebr"></div>
 
                         <h1>
-                            Hi again! My name is Dion Lewis. I'm a Canadian designer <br> currently studing Communications Design & Social and Political History at Carnegie Mellon University. <br><br>Huge fan of stories and their tellers :^) <br> 
+                            Hi again! My name is Dion Lewis. I'm a Canadian designer <br> currently studying Communications Design & Social and Political History at Carnegie Mellon University. <br><br>Huge fan of stories and their tellers :^) <br> 
                             <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
                             <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
                             <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
