trying out pink link color and shrinking h2 point size

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             
         </main>
 
-            <footer>
+            <!-- <footer>
                 <h4 style="color: #5CBBFF">
                     <div class="project-descriptions"> 
                         Custom Coded. Typefaces used: 'Offbit' by
@@ -131,7 +131,7 @@
                         <a href="https://pangrampangram.com/products/mori" target="_blank"> Pangram Pangram</a>.
                     </div> 
                 </h4>
-            </footer>
+            </footer> -->
         
         <div class="bigbr"></div>
     </body>
