more tweaking on index point sizes

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <!-- Info snippet -->
             <h1>
                 Hi again! My name is Dion Lewis. I'm a Canadian designer 
-                <br> currently studying Communications Design & Social and Political History at Carnegie Mellon University. 
+                currently studying Communications Design & Social and Political History at Carnegie Mellon University. 
                 <br>
                 <br>
                 Huge fan of stories and their ability to foster community.
