more tweaks, still haven't solved the extensions of nav-project's border over header boundary

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="gallery/inuit.html"><img class="project" src="images/inuit/temp-header.PNG">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2> Life and Death for Inuit in Northern Canada</h2> 
+                        <h2> Life and Death for Canadian Inuit</h2> 
                         <br> 
                         <h3>Web Design</h3>
                         <br> 
@@ -122,7 +122,7 @@
             
         </main>
 
-            <footer>
+            <!-- <footer>
                 <h4 style="color: #5CBBFF">
                     <div class="project-descriptions"> 
                         Custom Coded. Typefaces used: 'Offbit' by
@@ -132,7 +132,7 @@
                     </div> 
                 </h4>
             </footer>
-        
+         -->
         <div class="bigbr"></div>
     </body>
 </html>
