fixed the overflowing width

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="gallery/inuit.html"><img class="project" src="images/inuit/temp-header.PNG">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2> Life and Death for Canadian Inuit</h2> 
+                        <h2> Life and Death for Inuit Canadians</h2> 
                         <br> 
                         <h3>Web Design</h3>
                         <br> 
