fixing gallery image spacing, and visibility of anchor type by using light pink.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </nav>
 <!-- Intro end -->
 
-                <div class="hugebr"></div>
-                <div class="hugebr"></div>
+                <div class="specialbr"></div>
+                <div class="specialbr"></div>
             </header>
         
 <!-- START OF GALLERY -->
