added lorebot thumbnail image

--- a/gallery/inuit.html
+++ b/gallery/inuit.html
@@ -10,7 +10,7 @@
     <!-- the meta viewport tag makes this site responsive -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- this makes the site work better with microsoft browsers -->
-    <title> Dion Lewis - Life and Death for Inuit in Northern Canada</title>
+    <title> Dion Lewis - Life and Death for Inuit Canadians</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Epilogue&family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
@@ -42,7 +42,7 @@
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h1>
-                    Life and Death for  Inuit<br> in Northern Canada
+                        Life and Death <br> for Inuit Canadians
                     </h1>
 
                     <div class="smallbr"></div>
