--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
             </div> 
 
             <div class="hugebr"></div>
+                
+                
+<!-- Lorebot project start -->
+            <div class="image-gallery">
+                <a href="#"><img class="project" src="images/lorebot/thumbnail-composite-min.png">
+                    <div class="smallbr"></div>
+                    <div class="project-descriptions"> 
+                        <h2>Lorebot</h2> 
+                        <br> 
+                        <h3>Product Design</h3>
+                        <br> 
+                    </div>
+                </a>
+            </div> 
+
+            <div class="hugebr"></div>
 
 <!-- Basilica of Bom Jesus start-->
             <div class="image-gallery">
