--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="project-descriptions"> 
                         <h2> Life and Death for Inuit Canadians</h2> 
                         <br> 
-                        <h3>Web Design</h3>
+                        <h3>News Design</h3>
                         <br> 
                     </div>
                 </a>
@@ -72,12 +72,12 @@
                 
 <!-- Lorebot project start -->
             <div class="image-gallery">
-                <a href="#"><img class="project" src="images/lorebot/thumbnail-composite-min.png">
+                <a href="#"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
                         <h2>Lorebot</h2> 
                         <br> 
-                        <h3>Product Design</h3>
+                        <h3>Livestream AI Summarization + Product Design</h3>
                         <br> 
                     </div>
                 </a>
@@ -92,7 +92,7 @@
                     <div class="project-descriptions"> 
                         <h2> Basilica of Bom Jesus </h2> 
                         <br> 
-                        <h3>Publication Design</h3>
+                        <h3>Editorial Design</h3>
                         <br>
                     </div> 
                 </a>
@@ -130,7 +130,7 @@
             <div class="image-gallery">
                 <a href="https://sgkinc.com/en/" target="_blank"><img class="project" src="images/SGK_Logo.png">
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h2> SGK </h2> <br> <h3>Tech Design Internship</h3><br> </div> 
+                    <div class="project-descriptions"> <h2> SGK </h2> <br> <h3>Technical Design Internship</h3><br> </div> 
                 </a>
             </div> 
 
