added necessary breaks for header readability of index, tweaked copy on the header

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </nav_project>
                 <nav>
                     <h1>
-                        Hello there! I'm Dion Lewis, a graphic designer seeking 
-                        
-                        meaningful stories & thoughtful ways to visualize them. 
-                        <br> 
+                        Hello there! I'm Dion Lewis, a graphic designer passionate about shaping stories <br class="mobile-break">
+                        to be accessible and trustworthy. 
+                     <br> 
+                     <div class="special-mirco-br"></div>
                         <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
                         <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.  
@@ -56,7 +56,10 @@
 
 <!-- Inuit project start-->
             <div class="image-gallery">
-                <a href="gallery/inuit.html"><img class="project" src="images/inuit/temp-header.PNG">
+                <a href="gallery/inuit.html"><img class="project" 
+                    src="images/inuit/temp-header.PNG"
+                    alt="White introductory text to the article, sitting in the middle of a wideshot of a Northern Canadian coastal city.">
+                    
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
                         <h2> Life and Death for Inuit Canadians</h2> 
@@ -77,7 +80,7 @@
                     <div class="project-descriptions"> 
                         <h2>Lorebot</h2> 
                         <br> 
-                        <h3>Livestream AI Summarization + Product Design</h3>
+                        <h3>Livestream AI Summarization, Product Design</h3>
                         <br> 
                     </div>
                 </a>
@@ -105,7 +108,7 @@
                 <a href="gallery/spoken.html"><img class="project" src="images/spoken/spoken_thumbnail.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>A Tuvan Hero Tale</h2> <br> <h3>Visual System</h3><br> </div> 
+                        <h2>A Tuvan Hero Tale</h2> <br> <h3>Motion & Illustration</h3><br> </div> 
                 </a>
             </div> 
 
