workin on phone rag

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </nav_project>
                 <nav>
                     <h1>
-                        Hello there! I'm Dion Lewis, a graphic designer passionate about shaping stories <br class="mobile-break">
+                        Hello there! I'm Dion Lewis, a graphic designer passionate about shaping stories 
                         to be accessible and trustworthy. 
                      <br> 
                      <div class="special-mirco-br"></div>
