modified movile view to be acutally good on basilica page

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             
         </main>
 
-            <!-- <footer>
+            <footer>
                 <h4 style="color: #5CBBFF">
                     <div class="project-descriptions"> 
                         Custom Coded. Typefaces used: 'Offbit' by
@@ -151,7 +151,7 @@
                     </div> 
                 </h4>
             </footer>
-         -->
+        
         <div class="bigbr"></div>
     </body>
 </html>
