fixed mobile view on most pages, made lorebot page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 
 <!-- Lorebot project start -->
             <div class="image-gallery">
-                <a href="#"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
+                <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
                         <h2>Lorebot</h2> 
