--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 currently studying Communications Design & Social and Political History at Carnegie Mellon University. 
                 <br>
                 <br>
-                Huge fan of stories and their ability to foster community.
+                Huge fan of stories and their ability to open hearts.
                 <br> 
                 <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
                 <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
@@ -65,7 +65,7 @@
                     <div class="welcome-boxa2">
                         <h2 style="color: #5CBBFF">Work</h2> 
                         <br>
-                        <h8 style="color: #5CBBFF">
+                        <h4 style="color: #5CBBFF">
                             Technical Design Intern - <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a> 
                             <br>
                             Graphic Design Intern - <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU SLICE↗</a> 
@@ -89,7 +89,7 @@
                             Bachelor of <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Design↗</a> 
                             <br> 
                             Minor in <a href="https://www.cmu.edu/dietrich/history/undergraduate/minors/sph.html" target="_blank">Social and Political History↗</a>
-                        </h8>   
+                        </h4>   
                     </div>
                 </div>
             
@@ -100,7 +100,7 @@
                 Personally I'm a big
                 <a href="https://www.youtube.com/watch?v=1rWfyj4caRg" target="_blank">"lore"</a> 
                 guy, a lover of 
-                <a href="https://www.youtube.com/watch?v=SE7kje3z9c8" target="_blank">Metroidvanias</a>, 
+                <a href="https://www.youtube.com/watch?v=SE7kje3z9c8" target="_blank">platformers</a>, 
                 a shameless consumer of <a href="https://www.youtube.com/watch?v=Cx8TJ-qM1BU" target="_blank">youtube reactions</a>, 
                 a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>,  
                 a stan of <a href="https://www.carnegielibrary.org/" target="_blank"> public institutions</a>, 
