changed header to reflect interaction emphasis,

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                 <nav>
                     <h1>
                         Hello there! I'm Dion Lewis, a graphic designer passionate about shaping stories 
-                        to be accessible and trustworthy. 
+                        & interactions to be accessible.
+
+                        <!-- Hello there! I'm Dion Lewis, a graphic designer passionate about crafting accesible and engaging experiences. -->
+
                      <br> 
                      <div class="special-mirco-br"></div>
                         <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
@@ -54,6 +57,21 @@
                 <a href="#"><img class="smol" src="images/dion.gif"></a>
             </div> 
 
+<!-- Lorebot project start -->
+<div class="image-gallery">
+    <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
+        <div class="smallbr"></div>
+        <div class="project-descriptions"> 
+            <h2>Lorebot</h2> 
+            <br> 
+            <h3>Livestream AI Summarization, Product Design</h3>
+            <br> 
+        </div>
+    </a>
+</div> 
+
+<div class="hugebr"></div>            
+
 <!-- Inuit project start-->
             <div class="image-gallery">
                 <a href="gallery/inuit.html"><img class="project" 
@@ -73,20 +91,7 @@
             <div class="hugebr"></div>
                 
                 
-<!-- Lorebot project start -->
-            <div class="image-gallery">
-                <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
-                    <div class="smallbr"></div>
-                    <div class="project-descriptions"> 
-                        <h2>Lorebot</h2> 
-                        <br> 
-                        <h3>Livestream AI Summarization, Product Design</h3>
-                        <br> 
-                    </div>
-                </a>
-            </div> 
 
-            <div class="hugebr"></div>
 
 <!-- Basilica of Bom Jesus start-->
             <div class="image-gallery">
