--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 </nav_project>
                 <nav>
                     <h1>
-                        Hello there! I'm Dion Lewis, a graphic designer passionate about shaping stories 
-                        & interactions to be accessible.
+                        Hello there! I'm Dion Lewis, a communications designer passionate about crafting accessible and interactive stories.
 
                         <!-- Hello there! I'm Dion Lewis, a graphic designer passionate about crafting accesible and engaging experiences. -->
 
