adding more descriptive terms to index project subtitles, (coursework, personal, etc.)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="project-descriptions"> 
             <h2>Lorebot</h2> 
             <br> 
-            <h3>Livestream AI Summarization, Product Design</h3>
+            <h3>Coursework — Livestream AI Summarization, Product Design</h3>
             <br> 
         </div>
     </a>
@@ -81,7 +81,7 @@
                     <div class="project-descriptions"> 
                         <h2> Life and Death for Inuit Canadians</h2> 
                         <br> 
-                        <h3>News Design</h3>
+                        <h3>Coursework — Digital Narrative</h3>
                         <br> 
                     </div>
                 </a>
@@ -99,7 +99,7 @@
                     <div class="project-descriptions"> 
                         <h2> Basilica of Bom Jesus </h2> 
                         <br> 
-                        <h3>Editorial Design</h3>
+                        <h3>Coursework — Editorial Design</h3>
                         <br>
                     </div> 
                 </a>
@@ -112,7 +112,7 @@
                 <a href="gallery/spoken.html"><img class="project" src="images/spoken/spoken_thumbnail.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>A Tuvan Hero Tale</h2> <br> <h3>Motion & Illustration</h3><br> </div> 
+                        <h2>A Tuvan Hero Tale</h2> <br> <h3>Personal — Motion & Illustration</h3><br> </div> 
                 </a>
             </div> 
 
@@ -125,7 +125,7 @@
                     <div class="project-descriptions"> 
                         <h2>Shigeru Miyamoto</h2> 
                         <br> 
-                        <h3>Visual System</h3>
+                        <h3>Coursework — Digital Narrative</h3>
                         <br> 
                     </div> 
                 </a>
@@ -137,7 +137,7 @@
             <div class="image-gallery">
                 <a href="https://sgkinc.com/en/" target="_blank"><img class="project" src="images/SGK_Logo.png">
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h2> SGK </h2> <br> <h3>Technical Design Internship</h3><br> </div> 
+                    <div class="project-descriptions"> <h2> SGK </h2> <br> <h3>Internship — Technical Design</h3><br> </div> 
                 </a>
             </div> 
 
