--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
         <!-- Info snippet -->
             <h1>
-                Hi again! My name is Dion Lewis. I'm a graphic designer 
+                Hi again! My name is Dion Lewis. I'm a designer 
                 currently studying Communications Design & Social and Political History at Carnegie Mellon University. 
                 <br>
                 <br>
