--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="project-descriptions"> 
             <h2>Lorebot</h2> 
             <br> 
-            <h3>Coursework — Livestream AI Summarization, Product Design</h3>
+            <h3>Product Design, Livestream AI Summarization</h3>
             <br> 
         </div>
     </a>
@@ -81,7 +81,7 @@
                     <div class="project-descriptions"> 
                         <h2> Life and Death for Inuit Canadians</h2> 
                         <br> 
-                        <h3>Coursework — Digital Narrative</h3>
+                        <h3>Digital Narrative</h3>
                         <br> 
                     </div>
                 </a>
@@ -99,7 +99,7 @@
                     <div class="project-descriptions"> 
                         <h2> Basilica of Bom Jesus </h2> 
                         <br> 
-                        <h3>Coursework — Editorial Design</h3>
+                        <h3>Editorial Design</h3>
                         <br>
                     </div> 
                 </a>
@@ -107,31 +107,48 @@
 
             <div class="hugebr"></div>
 
+            <!-- stuco jumpin -->
+            <!-- <div class="image-gallery">
+                <a href="gallery/stuco.html"><img class="project" src="images/stuco/stuco_thumbnail.png">
+                    <div class="smallbr"></div>
+                    <div class="project-descriptions"> 
+                        <h2>CMU Student College</h2> 
+                        <br> 
+                        <h3> Identity Design, Social Media</h3><br> </div> 
+                </a>
+            </div> 
+
+            <div class="hugebr"></div> -->
+
 <!--Tuvan project start -->
             <div class="image-gallery">
                 <a href="gallery/spoken.html"><img class="project" src="images/spoken/spoken_thumbnail.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>A Tuvan Hero Tale</h2> <br> <h3>Personal — Motion & Illustration</h3><br> </div> 
+                        <h2>A Tuvan Hero Tale</h2> 
+                        <br> 
+                        <h3> Motion & Illustration</h3><br> </div> 
                 </a>
             </div> 
 
             <div class="hugebr"></div>
 
+            
+
 <!-- Miyamoto project start-->
-            <div class="image-gallery">
+            <!-- <div class="image-gallery">
                 <a href="gallery/moto.html"><img class="project" src="images/moto-thumbnail.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
                         <h2>Shigeru Miyamoto</h2> 
                         <br> 
-                        <h3>Coursework — Digital Narrative</h3>
+                        <h3> Digital Narrative</h3>
                         <br> 
                     </div> 
                 </a>
             </div> 
 
-            <div class="hugebr"></div>
+            <div class="hugebr"></div> -->
 
 <!-- SGK project start -->
             <div class="image-gallery">
