made an h7 for gallery page titles, changed inuit project name/framing

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2> Life and Death for Inuit Canadians</h2> 
+                        <h2>How Far North?</h2> 
                         <br> 
                         <h3>Digital Narrative</h3>
                         <br> 
