--- a/gallery/inuit.html
+++ b/gallery/inuit.html
@@ -39,9 +39,9 @@
             <!-- START OF INTRO STUFF -->
             <div class="welcome-container">
                 <div class="welcome-box1">
-                    <h1>
-                        Life and Death <br> for Inuit Canadians
-                    </h1>
+                    <h6>
+                        How Far North?
+                    </h6>
 
                     <div class="smallbr"></div>
 
@@ -56,7 +56,6 @@
                     <h3>
                         Highlighting Inuit Canadians' ongoing battle with tuberculosis through the stories of two children who tragically died due to the disease, 50 years apart.
                         <div class="smallbr"></div>
-                        Ongoing*
                     </h3>
             
                 </div>
